# synth

./: README.md  package-lock.json  package.json  pyproject.toml
backend/: requirements.txt
backend/app/: main.py  models.py
examples/: 01-apt.py  02-tv.py  03-gaz.py  04-agent.py  05-customer.py  06-travel.py  07-brainstorm.py  08-chat.py  09-data.py  10-word.py
examples/scratch/: tool.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/lib/: api.ts
frontend/components/: environment-select.tsx  environment-view.tsx  simulation-controls.tsx  story-view.tsx  timeline-view.tsx
