[project]
name = "synth"
version = "0.1.0"
description = "Synthetic personas with TinyTroupe"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "chevron>=0.14.0",
    "llama-index-readers-web>=0.3.1",
    "llama-index>=0.12.3",
    "markdown>=3.7",
    "matplotlib>=3.9.3",
    "openai>=1.57.0",
    "pandas>=2.2.3",
    "pypandoc>=1.14",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "tiktoken>=0.8.0",
    "fastapi>=0.115.6",
    "uvicorn>=0.32.1",
]
